# robocup-firmware

./: .clang_complete  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CommandLineBasics.md  Dockerfile  GettingStarted.md  Kicker.md  LICENSE  README.md  _a_v_r910_8cpp.html  _a_v_r910_8cpp__incl.dot  _a_v_r910_8cpp__incl.map  _a_v_r910_8cpp__incl.md5  _a_v_r910_8hpp.html  _a_v_r910_8hpp.js  _a_v_r910_8hpp__dep__incl.dot  _a_v_r910_8hpp__dep__incl.md5  _a_v_r910_8hpp__incl.dot  _a_v_r910_8hpp__incl.map  _a_v_r910_8hpp__incl.md5  _a_v_r910_8hpp_source.html  _battery_8cpp.html  _battery_8cpp__incl.dot  _battery_8cpp__incl.md5  _battery_8hpp.html  _battery_8hpp__dep__incl.dot  _battery_8hpp__dep__incl.map  _battery_8hpp__dep__incl.md5  _battery_8hpp__incl.dot  _battery_8hpp__incl.map  _battery_8hpp__incl.md5  _battery_8hpp_source.html  _battery_module_8cpp.html  _battery_module_8cpp__incl.dot  _battery_module_8cpp__incl.map  _battery_module_8cpp__incl.md5  _battery_module_8hpp.html  _battery_module_8hpp__dep__incl.dot  (+2595 more)
API/cpp/: CMakeLists.txt  mtrain.hpp
API/cpp/Inc/: AnalogIn.hpp  DigitalIn.hpp  DigitalOut.hpp  I2C.hpp  PinDefs.hpp  PinsDefs.hpp  SPI.hpp  delay.hpp  mtrain.hpp
API/cpp/Src/: AnalogIn.cpp  DigitalIn.cpp  DigitalOut.cpp  I2C.cpp  SPI.cpp  delay.cpp
BSP/: CMakeLists.txt  flash.ld  startup.s  startup_stm32f769xx.s  system_stm32f7xx.c
BSP/Inc/: bsp.h  mtrain.h
BSP/STM32F769I_EVAL/: CMakeLists.txt  stm32f769i_eval.c  stm32f769i_eval.h  stm32f769i_eval_audio.c  stm32f769i_eval_audio.h  stm32f769i_eval_camera.c  stm32f769i_eval_camera.h  stm32f769i_eval_eeprom.c  stm32f769i_eval_eeprom.h  stm32f769i_eval_io.c  stm32f769i_eval_io.h  stm32f769i_eval_lcd.c  stm32f769i_eval_lcd.h  stm32f769i_eval_nor.c  stm32f769i_eval_nor.h  stm32f769i_eval_qspi.c  stm32f769i_eval_qspi.h  stm32f769i_eval_sd.c  stm32f769i_eval_sd.h  stm32f769i_eval_sdram.c  stm32f769i_eval_sdram.h  stm32f769i_eval_sram.c  stm32f769i_eval_sram.h  stm32f769i_eval_ts.c  stm32f769i_eval_ts.h
BSP/Src/: AnalogIn.c  bsp.c  interrupt_handlers.c  mtrain.c  qspi.c  rtos_hooks.c  stm32f7xx_hal_msp.c  usbd_cdc_interface.c
BSP/config/hal/: stm32f7xx_hal_conf.h
BSP/config/usb/: usbd_conf.c  usbd_desc.c
BSP/mtrain/: mtrain.c  mtrain.h  stm32f7xx_hal_msp.c  stm32f7xx_it.c  stm32f7xx_it.h
control/: CMakeLists.txt  conanfile.py
control/base/: CMakeLists.txt
control/control/: .#CMakeLists.txt  CMakeLists.txt
control/include/: macro.hpp  robocup.hpp
control/include/drivers/: AVR910.hpp  Battery.hpp  FPGA.hpp  GenericRadio.hpp  ICM20948.hpp  ICM42605.hpp  IOExpanderDigitalInOut.hpp  ISM43340.hpp  KickerBoard.hpp  MCP23017.hpp  PCA9848.hpp  PCA9858PWJ.hpp  RotarySelector.hpp  TSL2572.hpp  VEML6040.hpp  VEML6040A3OG.hpp
control/include/robocup/: LockedStruct.hpp  MicroPackets.hpp  common.hpp  iodefs.h  log.h  main.hpp  robocup.hpp
control/include/test/: motor.hpp
control/mtrain/: CMakeLists.txt  Dockerfile  README.md  makefile
control/mtrain/API/: CMakeLists.txt
control/mtrain/BSP/: CMakeLists.txt
control/mtrain/bsp/: CMakeLists.txt  PinDefs.hpp  flash.ld  mtrain_hardware_init.h  stm32f7xx_hal_conf.h
control/mtrain/cmake/: mtrain-toolchain.cmake
control/mtrain/doc/: Doxyfile  IntroTomTrain.md
control/mtrain/util/: flash.py  macos-packages.txt  wsl-setup
control/src/drivers/: AVR910.cpp  Battery.cpp  FPGA.cpp  ICM20948.cpp  ICM42605.cpp  ISM43340.cpp  KickerBoard.cpp  MCP23017.cpp  MPU6050.cpp  PCA8948.cpp  PCA9848.cpp  PCA9858PWJ.cpp  (+3 more)
control/test/: CMakeLists.txt  fpga-test.cpp  icm-20498-angle.cpp  icm-20498-rate.cpp  icm-42605-angle.cpp  motor.cpp  radio-test.cpp  radio_test.py  rtos.cpp  shell-test.cpp  test.cpp  uart_test.cpp
control/tests/: CMakeLists.txt  blink.cpp  icm-20498-angle.cpp  icm-20498-rate.cpp  icm-42605-angle.cpp  radio-test.cpp  rtos.cpp
kicker/: CMakeLists-copy.txt  CMakeLists.txt  HAL_atmega32a.c  HAL_atmega32a.h  HAL_attiny167.h  atmega_toolchain.cmake  attiny_toolchain.cmake  convert.py  kicker_commands.h  kicker_config.h  main.c  main.c.bak  main.c.bak.2  main.c.text  main.c.tst  pins.h  test.c  util.c  util.h
kicker/cmake/: atmega-toolchain.cmake
kicker/include/: kicker.h
kicker/src/: HAL_attiny167.c  main.c  test.c
lib/: CMakeLists.txt  Rtos.hpp
lib/mbed/: CMakeLists.txt  burst-spi.cmake  moddma.cmake  modserial.cmake  pixelarray.cmake  software-i2c.cmake  software-spi.cmake
lib/modules/: CommLink.cpp  CommModule.cpp
lib/test/: CommPortTest.cpp  FakeRtos.hpp  RTPTest.cpp
lib/utils/: Assert.cpp  HelperFuncs.cpp  Logger.cpp
robot/: CMakeLists.txt  conanfile.py
robot/base/: CMakeLists.txt
robot/control/: CMakeLists.txt  iodefs.h  main.cpp
robot/hw-test/: .driver-test.cpp.swo  .test.cpp.swo  CMakeLists.txt  adc124s101-whoami.cpp  driver-test.cpp  motor.cpp  radio-test.cpp  rtos.cpp  test.cpp  test2.cpp  tmc4671-whoami.cpp  tmc6200-whoami.cpp
robot/lib/: CMakeLists.txt
robot/trace_captures/: trace_capture_03.logicdata.REMOVED.git-id
src/: CMakeLists.txt  README.md
src/base/: CMakeLists.txt  RJBaseUSBDevice.cpp  main.cpp
src/control/: CMakeLists.txt  main.cpp
src/fpga/: CMakeLists.txt  README.md
src/hw-test/: CMakeLists.txt  fpga-test.cpp  io-expander-test.cpp  led-test.cpp  test-attiny-programmer.cpp  test-attiny.cpp  test-fpga.cpp  test-i2c.cpp  test-imu-calibration.cpp  test-imu.cpp  test-io-expander.cpp  test-kicker.cpp  test-led.cpp  test-motor.cpp  test-neopixel.cpp  test-new-radio-tcp.cpp  test-new-radio.cpp  test-piezo.cpp  test-radio-receiver.cpp  test-radio-sender.cpp
src/kicker/: CMakeLists.txt  attiny_toolchain.cmake  main.c
test/: CMakeLists.txt
test/Inc/: main.h
test/Src/: main.c  stm32f7xx_it.c
tests/: AnalogIn.h  CMakeLists.txt  adc.c  blink.c  blink2.c  flash.c  i2c_bus_recovery.cpp  main.c  usb.c  usb_serial.c
tests/build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/c/: CMakeLists.txt  adc.c  blink.c  blink_interrupt.c  flash.c  gpio.c  us_delay.c  usb_serial.c
tests/cpp/: CMakeLists.txt  adc.cpp  blink.cpp  gpio.cpp  i2c.cpp  spi.cpp  us_delay.cpp  usb_serial.cpp
(+3500 files in other folders)
